# llm

./: .pre-commit-config.yaml  Makefile  README.md  Untitled presentation.pptx  config.py  pyproject.toml
.ipynb_checkpoints/: api-checkpoint.txt
config/: config.json  config.py  main.yaml
html/: test.html  training.html
models/: trainedmodel.pkl
notebook/: Customizing_embeddings.ipynb  Embedding_Wikipedia_articles_for_search.ipynb  How_to_call_functions_for_knowledge_retrieval.ipynb  How_to_call_functions_with_chat_models.ipynb  How_to_stream_completions.ipynb  Question_answering_using_embeddings.ipynb  Recommendation_using_embeddings.ipynb  Unit_test_writing_using_a_multi-step_prompt.ipynb  Unit_test_writing_using_a_multi-step_prompt_with_older_completions_API.ipynb  Using_vector_databases_for_embeddings_search.ipynb  test.ipynb
notebook/.ipynb_checkpoints/: test-checkpoint.ipynb
notebooks/: Embedding_long_inputs.ipynb  Lab_1_summarize_dialogue.ipynb  Lab_2_fine_tune_generative_ai_model.ipynb  Lab_3_fine_tune_model_to_detoxify_summaries.ipynb  Untitled.ipynb  Untitled1.ipynb  advanced-rag-with-gemma-and-langchain.ipynb  aura-Copy1.ipynb  aura.ipynb  coding.ipynb  dl_tools.ipynb  encoder.ipynb  faiss.ipynb  interview.ipynb  interview_1.ipynb  interview_2.ipynb  interview_3.ipynb  interview_clustering.ipynb  llm_rag_project.ipynb  nlp_Stock_Price_using_BERT.ipynb  project_cv.ipynb  project_evaluation.ipynb  project_finetune.ipynb  project_nlp.ipynb  project_rag_llm.ipynb  project_rlfh.ipynb  project_rlhf.ipynb  projects.ipynb  pygemma-finetuned-rag.ipynb  rag-evaluation.ipynb  rag_chain.ipynb  rag_chain_eval.ipynb  recommendation-system-using-langchain-and-llm.ipynb  state_of_the_union.txt  template.ipynb  test.ipynb  topics.ipynb  weaviate.ipynb
notebooks/.virtual_documents/: interview_1.ipynb  interview_2.ipynb  interview_3.ipynb  interview_NN-Copy1.ipynb
notebooks/faiss_index/: index.faiss  index.pkl
notebooks/generativeai/: Lab_1_summarize_dialogue.ipynb  Lab_2_fine_tune_generative_ai_model.ipynb  Lab_3_fine_tune_model_to_detoxify_summaries.ipynb
notebooks/interview/: aura_1.ipynb  aura_2.ipynb  cv.ipynb  encoder.ipynb  interview_0.ipynb  practice.ipynb  (+5 more)
production_deployment/: ingestedfiles.txt  trainedmodel.pkl
tests/: test_llm.py  test_scoring.py
(+47 files in other folders)
