[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["goldin2008 <goldin20082011@gmail.com>"]
readme = "README.md"
packages = [{include = "llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
