[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["goldin2008 <goldin20082011@gmail.com>"]
readme = "README.md"
packages = [{include = "llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
pandas = "^2.0.2"
transformers = "^4.30.2"
plotly = "^5.15.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
