[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["goldin2008 <goldin20082011@gmail.com>"]
readme = "README.md"
packages = [{include = "llm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
pandas = "^2.0.2"
transformers = "^4.30.2"
plotly = "^5.15.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
tiktoken = "^0.4.0"
pdoc3 = "^0.10.0"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
interrogate = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "./figs/"
badge-format = "svg"